tests/should_fail/diagnostics/index_unimplemented.stderr
error[E0599]: the type `S` cannot be indexed by `_` in logic
  --> index_unimplemented.rs:10:13
   |
 5 | struct S;
   | -------- method `__creusot_index_logic_stub` not found for this struct because it doesn't satisfy `S: creusot_contracts::logic::ops::IndexLogic<_>`
...
10 |     let _ = x[0];
   |             ^^^^ `S` cannot be indexed by `_` in logic
   |
   = note: the following trait bounds were not satisfied:
           `S: creusot_contracts::logic::ops::IndexLogic<_>`
           `&S: creusot_contracts::logic::ops::IndexLogic<_>`
           `&mut S: creusot_contracts::logic::ops::IndexLogic<_>`
note: the trait `creusot_contracts::logic::ops::IndexLogic` must be implemented
  --> ./creusot-contracts/src/logic/ops.rs:11:1
   |
11 | pub trait IndexLogic<I: ?Sized> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `__creusot_index_logic_stub`, perhaps you need to implement it:
           candidate #1: `creusot_contracts::__stubs::IndexLogicStub`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
